--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGODB_URI=mongodb://localhost:27017/test
 SECRET_TOKEN=catswillruletheworld
+
+Consumer Key (API Key)	wc95AYUW9m52fUI5zAjTa3YTa
+Consumer Secret (API Secret)	79k9j5umR1Se75Pt9HFUh8989xm60bxhJCyvdgkAuZN4CUVW4a
+Access Token	249584013-DxVls2uCrxpisaIYPZncYUkibr1vg4Qnm622wiqU
+Access Token Secret	vkMJLjWVV2zV6aVDO0BFyPPcqiC5WC5T3Blsoc6xc0suI
